--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "burger-resturant-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "## What the application does",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,5 +27,6 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^3.0.0",
     "mysql": "^2.16.0"
-  }
+  },
+  "devDependencies": {}
 }
