--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": "8.11.3"
+    "node": ">=8.11.3"
   },
   "start": "node server.js",
   "repository": {
