--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "engines": {
-    "node": "8.11.3"
+  "engine": {
+    "node": ">=8.11.3"
   },
   "start": "node server.js",
   "repository": {
